Version 1.1
^^^^^^^^^^^^^
* Added new generic functions for duck database to output tables to files
* Expansion of systeminformation module to feedback:
  - CPU usage
  - System uptime
  - System information
  - Network stats
  - Top processes
* Enhanced dataclean module with:
  - `keep_only_letters`: Filters strings to keep only alphabetical characters
  - `keep_alphanumeric`: Filters strings to keep only alphanumeric characters
  - `normalize_text`: Converts text to lowercase and removes accents
  - `remove_empty_rows`: Removes rows where all values are empty or NaN
  - `convert_to_numeric`: Converts specified columns to numeric type
  - `check_column_completeness`: Calculates the percentage of non-missing values for each column

Version 1.0.2
^^^^^^^^^^^^^

* Added Bitgen Features:
  - `generate_random_uuid`: Generates a random UUID (Universally Unique Identifier) using UUID version 4, with dashes removed.
  - `generate_custom_uuid`: Generates a random UUID using UUID version 4, formatted with a specified marker. The default marker is a dash ('-'), but it can be customized.

Version 1.0.1
^^^^^^^^^^^^^

* First full release of package